# panopti

./: Args.hs  Cache.hs  Converter.hs  ErrorParser.hs  Hackel.hs  HoogleCustom.hs  Html.hs  Lang.hs  Main.hs  MyMain.hs  Parse.hs  Qualify.hs  QuickCheck.hs  README  README.md  Result.hs  Simple.hs  Smart.hs  Special.hs  Specialize.hs  Utils.hs  activehs.cabal  panopti.cabal  sinuhask.cabal
GhcDriver/: Compat.hs  Context.hs  Conversions.hs  GHC.hs  Server.hs  Wrapper.hs
copy/: common.css  common_en.js  common_hu.js
doc/: DevDoc_en.lhs  UsersGuide_en.lhs  watchserver.sh
source/: MyMain.hs  Quoter.hs
src/: Annotations.hs  Brace.hs  Diagrams.hs  ErrorParser.hs  ExprDiagrams.hs  GHC.hs  GhcRunner.hs  Input.hs  Main.hs  PartialParse.hs  Simple.hs  State.hs  TypeDiagrams.hs  TypeInfo.hs  Utils.hs
src/ActiveHs/: Specialize.hs
src/Hint/: Annotations.hs  Base.hs  Compat.hs  GHC.hs  InterpreterT.hs  Parsers.hs
src/Language/Haskell/: Interpreter.hs
template/: en.template  hu.template
