Name:                panopti
Version:             0.0.2
Cabal-Version:       >= 1.2
Synopsis:            
Category:            
Description:         
License:             BSD3
License-file:        LICENSE
Author:              Michael Sloan
Maintainer:          Michael Sloan <mgsloan@gmail.com>
Stability:           experimental
Build-Type:          Simple

executable panopti
  Main-Is:           Main.hs
  Hs-Source-Dirs:    src
  Ghc-Options:        -Wall -O2
  Other-Modules:     
                     ActiveHs.Simple
                     Annotations
                     Brace
                     ErrorParser
                     PartialParse
                     TypeDiagrams
                     TypeInfo
                     Utils

                     -- Hint modules
                     Hint.Base
                     Hint.Compat
                     Hint.Configuration
                     Hint.Context
                     Hint.Conversions
                     Hint.Eval
                     Hint.Extension
                     Hint.GHC
                     Hint.InterpreterT
                     Hint.Parsers
                     Hint.Reflection
                     Hint.Sandbox
                     Hint.SignalHandlers
                     Hint.Typecheck
                     Hint.Util
                     Language.Haskell.Interpreter
                     Language.Haskell.Interpreter.Extension
                     Language.Haskell.Interpreter.GHC
                     Language.Haskell.Interpreter.GHC.Unsafe
                     Language.Haskell.Interpreter.Unsafe

  Extensions:        DoAndIfThenElse
                     ScopedTypeVariables
                     TemplateHaskell
                     TupleSections

                     -- Hint extensions
                     CPP
                     DeriveDataTypeable
                     ExistentialQuantification
                     FlexibleContexts
                     FlexibleInstances
                     FunctionalDependencies
                     GeneralizedNewtypeDeriving
                     KindSignatures
                     MagicHash
                     MultiParamTypeClasses
                     PatternGuards
                     Rank2Types
                     ScopedTypeVariables
                     TypeSynonymInstances
                     
  Build-Depends:     
                     array,
                     attoparsec,
                     attoparsec-enumerator,
                     base,
                     Cabal,
                     cairo,
                     colour,
                     containers,
                     data-default,
                     diagrams-cairo,
                     diagrams-core,
                     diagrams-lib,
                     directory,
                     extensible-exceptions,
                     fclabels,
                     filepath,
                     fingertree,
                     ghc,
                     ghc-mtl,
                     ghc-paths,
                     glib,
                     gtk,
                     gtk-toy,
                     gtk-toy-diagrams,
                     haskell-src,
                     haskell-src-exts,
                     hint,
                     MonadCatchIO-mtl >= 0.2,
                     mtl,
                     newtype,
                     old-time,
                     random,
                     rex,
                     split,
                     syb,
                     template-haskell,
                     utf8-string,
                     value-supply
