Name:                sinuhask
Version:             0.0.1
Cabal-Version:       >= 1.2
Synopsis:            
Category:            
Description:         
License:             BSD3
License-file:        LICENSE
Author:              Michael Sloan
Maintainer:          Michael Sloan <mgsloan@gmail.com>
Stability:           experimental
Build-Type:          Simple

executable sinu
  Main-Is:           Main.hs
  Other-Modules:     ErrorParser, Utils, Simple
  Extensions:        DoAndIfThenElse, ScopedTypeVariables, TemplateHaskell,
                     TupleSections
  Build-Depends:     array,
                     attoparsec,
                     attoparsec-enumerator,
                     base,
                     Cabal,
                     cairo,
                     containers,
                     colour,
                     curve,
                     directory,
                     enumerator,
                     fclabels,
                     filepath,
                     fingertree,
                     ghc,
                     ghc-mtl,
                     ghc-paths,
                     glib,
                     haskell-src,
                     haskell-src-exts,
                     hint,
                     rex,
                     mtl,
                     old-time,
                     syb,
                     template-haskell,
                     toyframework,
                     utf8-string,
                     random
