Name:                sinuhask
Version:             0.0.1
Cabal-Version:       >= 1.2
Synopsis:            
Category:            
Description:         
License:             BSD3
License-file:        LICENSE
Author:              Michael Sloan
Maintainer:          Michael Sloan <mgsloan@gmail.com>
Stability:           experimental
Build-Type:          Simple

executable sinu
  Main-Is:           Main.hs
  Hs-Source-Dirs:    src
  Ghc-Options:        -Wall -O2
  Other-Modules:     ErrorParser, Utils, Simple
  Other-Modules:     ErrorParser
                     Utils
                     Simple

                     -- Hint modules
                     Language.Haskell.Interpreter
                     Language.Haskell.Interpreter.Extension
                     Language.Haskell.Interpreter.Unsafe
                     Language.Haskell.Interpreter.GHC
                     Language.Haskell.Interpreter.GHC.Unsafe
                     Hint.GHC
                     Hint.Base
                     Hint.InterpreterT
                     Hint.Compat
                     Hint.Configuration
                     Hint.Extension
                     Hint.Context
                     Hint.Conversions
                     Hint.Eval
                     Hint.Parsers
                     Hint.Reflection
                     Hint.Typecheck
                     Hint.Sandbox
                     Hint.SignalHandlers
                     Hint.Util

  Extensions:        DoAndIfThenElse
                     ScopedTypeVariables
                     TemplateHaskell
                     TupleSections

                     -- Hint extensions
                     CPP
                     GeneralizedNewtypeDeriving
                     MultiParamTypeClasses
                     DeriveDataTypeable
                     MagicHash
                     TypeSynonymInstances
                     FlexibleInstances
                     FlexibleContexts
                     FunctionalDependencies
                     KindSignatures
                     Rank2Types
                     ScopedTypeVariables
                     ExistentialQuantification
                     PatternGuards
                     
  Build-Depends:     array,
                     attoparsec,
                     attoparsec-enumerator,
                     base,
                     Cabal,
                     cairo,
                     containers,
                     colour,
                     curve,
                     directory,
                     enumerator,
                     fclabels,
                     filepath,
                     fingertree,
                     ghc,
                     ghc-mtl,
                     ghc-paths,
                     glib,
                     haskell-src,
                     haskell-src-exts,
                     hint,
                     rex,
                     mtl,
                     old-time,
                     rounding,
                     syb,
                     template-haskell,
                     toyframework,
                     utf8-string,
                     random,
                     extensible-exceptions,
                     MonadCatchIO-mtl >= 0.2
